Deployed on Https

--- a/index.html
+++ b/index.html
@@ -95,12 +95,11 @@
           <img id="weather-icon" src="" altf="Weather Icon">
           <div id="weather-details"></div>
         </div>
-        <h3>Thank you Message by React JS</h3>
-        <div id="root"></div>
+
     <script type="text/babel">
-    // Your React code will go here
+        // Your React code will go here
         function ThankYouMessage() {
-        return <h4>Thank You! Please Visit Again! </h4>;
+    return <h4>Thank You! Please Visit Again </script>h4>;
     }
 
     ReactDOM.render(<ThankYouMessage />, document.getElementById('root'));
